Tue Jul  1 09:52:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join2): New tests.

	* repos.c (Name_Repository): Check for errors from fclose.

Fri Jun 27 10:27:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* scramble.c, login.c: Reindent.

	* client.c (connect_to_pserver): Check for errors from send().
	If socket() fails, include SOCK_STRERROR (SOCK_ERRNO) in message.

Wed Jun 25 11:21:52 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: New option --help-options, with much of the text
	from --help.  Fix a few capitalization and punctuation problems.
	Rewrite text for --help to be an intro to all the --help-*
	options.

	* sanity.sh (head): New tests, concerning meaning of HEAD.

Tue Jun 24 10:14:18 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (recv_line): New function.
	(connect_to_pserver): Call it, and rewrite accordingly.  Also
	accept new "E" and "error" responses.  Change \n to \012.
	* server.c (pserver_authenticate_connection): Adjust comment
	accordingly, concerning sending I HATE YOU not "error".

Sun, 22 Jun 1997  Jim Kingdon

	* main.c (main): Move setting of server_active inside #ifdef
	SERVER_SUPPORT; otherwise the variable doesn't exist.
	* main.c (main): Call return after exit to shut up warning.

Fri Jun 20 22:56:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (connect_to_pserver): On "I HATE YOU", give
	"authorization failed" fatal error regardless of verify_only.
	* login.c (login): Don't print that "incorrect password" message;
	it now is possible with an --allow-root failure as well as an
	incorrect password.  cvsclient.texi doesn't really specify what I
	HATE YOU means in any detail, and it seems a little silly for
	login to give different messages than the other commands.
	* client.c, client.h (connect_to_pserver): Return type now void.

Thu Jun 19 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_root): Give error on duplicate Root request.