@@ -36,6 +36,7 @@ static const char *const add_usage[] =
     "Usage: %s %s [-k rcs-kflag] [-m message] files...\n",
     "\t-k\tUse \"rcs-kflag\" to add the file with the specified kflag.\n",
     "\t-m\tUse \"message\" for the creation log.\n",
+    "(Specify the --help global option for a list of other help options)\n",
     NULL
 };
 
